# SimplyConvertFile

./: .gitignore  Makefile  README.md  gpg.key  hatch_build.py  pyproject.toml
.github/workflows/: deploy-appimage.yml  deploy-deb.yml  deploy-docs.yml  deploy-rpm.yml  dev-release.yml  release.yml  update-settings.yml
conf/: distributions
dists/stable/: InRelease  Release  Release.gpg
docs/: Gemfile  _config.yml  architecture.md  formats.md  index.md
docs/about/: acknowledgments.md  changelog.md  index.md
docs/configuration/: command-security.md  format-templates.md  index.md  notifications.md  overview.md  special-rules.md
docs/contributing/: development.md  index.md  translations.md
docs/getting-started/: dependencies.md  index.md  installation.md
docs/reference/: debug.md  faq.md  index.md  performance.md  troubleshooting.md
docs/usage/: advanced.md  batch-conversion.md  index.md  keyboard-shortcuts.md  single-conversion.md
packaging/: build-deb.sh  build-rpm.sh  convert-file.nemo_action  rpm-postinst.sh  simplyconvertfile.desktop  simplyconvertfile.nemo_action
packaging/apt/conf/: distributions
pool/: simplyconvertfile_2.0.0_all.deb
settings/: settings.json
src/simpleconvertfile/: __init__.py
src/simpleconvertfile/config/: settings.py  user_settings.json
src/simplyconvertfile/: __init__.py  __main__.py  main.py
src/simplyconvertfile/actions/: base.py  batch.py  single.py
src/simplyconvertfile/config/: formats.py  settings.json  settings.py  types.py
src/simplyconvertfile/converters/: archive.py  audio.py  base.py  data.py  document.py  image.py  markup.py  office.py  presentation.py  special.py  spreadsheet.py  video.py
src/simplyconvertfile/core/: factory.py
src/simplyconvertfile/po/: ca.po  convert-file@thigschuch.pot  cs.po  da.po  es.po  eu.po  fi.po  fr.po  hu.po  is.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  simplyconvertfile.pot  tr.po  uk.po  vi.po
src/simplyconvertfile/ui/: __init__.py  aui.py  dialogs.py  icons.py  notifications.py
src/simplyconvertfile/utils/: logging.py  text.py  (+2 more)
(+27 files in other folders)
