[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplyconvertfile"
version = "2.0.0"
description = "Universal file format converter for Linux - supports 80+ formats including images, videos, audio, documents, and archives"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
authors = [
    {name = "thigschuch"},
]
keywords = ["converter", "file-converter", "linux", "gtk", "ffmpeg", "imagemagick"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/linuxmint/cinnamon-spices-actions"

[project.scripts]
simplyconvertfile = "simplyconvertfile.main:main"

[tool.hatch.build.targets.sdist]
include = [
    "src/simplyconvertfile/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simplyconvertfile"]

[tool.hatch.build.targets.wheel.force-include]
"src/simplyconvertfile/config/settings.json" = "simplyconvertfile/config/settings.json"
"src/simplyconvertfile/config/user_settings.json" = "simplyconvertfile/config/user_settings.json"
"src/simplyconvertfile/resources" = "simplyconvertfile/resources"
"src/simplyconvertfile/po" = "simplyconvertfile/po"
